[package]
name = "cmake-package"
version = "0.1.2"
authors = ["Daniel Vrátil <dvratil@kde.org>"]
license = "MIT"
repository = "https://github.com/danvratil/cmake-package-rs"
homepage = "https://github.com/danvratil/cmake-package-rs"
documentation = "https://docs.rs/cmake-package"
description = """
A helper library for Cargo build-scripts to find and link against existing CMake packages.
"""
keywords = ["build-dependencies", "cmake"]
readme = "README.md"
categories = ["development-tools::build-utils"]
exclude = ["/.github", "tests"]
edition = "2021"

[dependencies]
itertools = "0.13"
once_cell = "1.20.2"
regex = "1.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tempfile = "3"
which = "7"

[dev-dependencies]
scopeguard = "1.2"
serial_test = "3.2"

[target.'cfg(unix)'.dev-dependencies]
stdio-override = "0.1"
